{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Player",
            "id": "40224f41-d62c-4179-ac06-c0f6e79b387e",
            "actions": [
                {
                    "name": "TouchInput",
                    "type": "PassThrough",
                    "id": "f5b37686-daf5-4e36-8315-3007d9061c74",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TouchPress",
                    "type": "Button",
                    "id": "d8dd7828-e423-47a2-a08d-a02e1771c505",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": true
                },
                {
                    "name": "TouchPosition",
                    "type": "PassThrough",
                    "id": "154f3bd9-a4c2-4109-9ab1-eec0fa66ecfb",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchMovementProjectile",
                    "type": "PassThrough",
                    "id": "ba2399ff-b677-430c-a051-80f311ac5909",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "904305f4-5141-4aeb-8fd1-ec8d2953df10",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "TouchInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8fe86cd8-21ec-496b-a1b6-a66a80bfc4cc",
                    "path": "<Touchscreen>/primaryTouch",
                    "interactions": "",
                    "processors": "",
                    "groups": "Touchscreen Controller",
                    "action": "TouchInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "b645aa59-e9f9-48d0-9e19-b4239ef73858",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "7d7cb7b5-9aee-4ce9-9179-3820d2d4c5f0",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "1a7df2ae-752e-4a1d-90e0-44a0937e345d",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "6a9b141c-eecc-4d24-8094-15f8af5db606",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "647540c1-e873-4387-b29b-96bb0709c606",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "2D Vector",
                    "id": "ad3be386-8fba-4765-a548-aa623063ffdd",
                    "path": "2DVector(mode=2)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "57f45837-fe71-4866-9cd5-4ee9b5446ee3",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "ae458631-b932-47c7-be92-06bf4bcf36b9",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0bb354dc-2b39-4b0e-a30c-74dae1fc258f",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "Touchscreen Controller",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3e1f3ada-a58d-4d39-879a-a0cacf99c88f",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Touchscreen Controller",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "55b42d6d-bc40-4f2b-a2f2-10be1449d2c1",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "TouchMovementProjectile",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard",
            "bindingGroup": "Keyboard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Touchscreen Controller",
            "bindingGroup": "Touchscreen Controller",
            "devices": [
                {
                    "devicePath": "<Touchscreen>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}